--- a/gradle.properties
+++ b/gradle.properties
@@ -12,17 +12,17 @@ android.buildToolsVersion=25.0.2
 android.support.version=25.1.0
 
 ### LIBRARY ========================================================================================
-library.minSdkVersion=9
-library.version=1.0.0-beta1
+library.minSdkVersion=14
+library.version=0.9.0
 
 ### MAVEN ==========================================================================================
 maven.url.local=C:\\Users\\Martin\\.m2\\repository
 ## MAVEN:POM FILE ----------------------------------------------------------------------------------
 maven.pom.groupId=universum.studios.android
 maven.pom.artifactId=settings
-maven.pom.version=1.0.0-beta1
+maven.pom.version=0.9.0
 maven.pom.packaging=pom
-maven.pom.project.name=Android Forms
+maven.pom.project.name=Android Settings
 maven.pom.project.description=Extended Settings components for the Android Platform.
 maven.pom.project.url=https://github.com/universum-studios/android_settings
 maven.pom.project.inceptionYear=2017
@@ -30,6 +30,6 @@ maven.pom.project.issueManagement.url=https://github.com/universum-studios/andro
 
 ### BINTRAY ========================================================================================
 bintray.package.name=universum.studios.android:settings
-bintray.package.version.name=1.0.0-beta1
-bintray.package.version.description=First version beta release.
-bintray.package.version.tag=1.0.0-beta1
+bintray.package.version.name=0.9.0
+bintray.package.version.description=First pre-release.
+bintray.package.version.tag=0.9.0
