--- a/samples/gradle.properties
+++ b/samples/gradle.properties
@@ -23,7 +23,7 @@ samples.applicationId=universum.studios.android.samples.setting
 samples.minSdkVersion=14
 samples.targetSdkVersion=25
 samples.versionCode=1
-samples.versionName=1.0.0-beta1
+samples.versionName=0.9.0
 
 ### SIGNING ========================================================================================
 # Property with path to properties file which stores signing data.
