Publishing scripts update.

--- a/publish/artifacts.gradle
+++ b/publish/artifacts.gradle
@@ -44,10 +44,19 @@ task generateJavadoc(type: Javadoc) {
         //options.addStringOption('Xdoclint:none', '-quiet')
     }
     // Append class path with dependencies.
+    final String mavenLocalDir = project.property('maven.url.local')
     final String supportVersion = project.property('android.support.version')
     classpath += files(
             android.getBootClasspath(),
-            sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\support-annotations\\' + supportVersion + '\\support-annotations-' + supportVersion + '.jar'
+            sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\support-annotations\\' + supportVersion + '\\support-annotations-' + supportVersion + '.jar',
+            sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\support-v4\\' + supportVersion + '\\support-v4-' + supportVersion + '-sources.jar',
+            sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\appcompat-v7\\' + supportVersion + '\\appcompat-v7-' + supportVersion + '-sources.jar',
+            sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\support-vector-drawable\\' + supportVersion + '\\support-vector-drawable-' + supportVersion + '-sources.jar',
+            mavenLocalDir + '\\universum\\studios\\android\\widget-adapters-core\\1.0.0\\widget-adapters-core-1.0.0-sources.jar',
+            mavenLocalDir + '\\universum\\studios\\android\\widget-adapters-list\\1.0.0\\widget-adapters-list-1.0.0-sources.jar',
+            mavenLocalDir + '\\universum\\studios\\android\\widget-adapters-spinner\\1.0.0\\widget-adapters-spinner-1.0.0-sources.jar',
+            mavenLocalDir + '\\universum\\studios\\android\\ui\\0.9.0\\ui-0.9.0-sources.jar',
+            mavenLocalDir + '\\universum\\studios\\android\\dialogs\\0.9.0\\dialogs-0.9.0-sources.jar'
     )
     failOnError false
 }
