--- a/library-dialog_group/build.gradle
+++ b/library-dialog_group/build.gradle
@@ -76,7 +76,7 @@ repositories {
 }
 
 dependencies {
-    final String supportVersion = project.property('android.support.version')
+    def String supportVersion = project.property('android.support.version')
     /*
      * RELEASE DEPENDENCIES ------------------------------------------------------------------------
      */
