--- a/publish/artifacts.gradle
+++ b/publish/artifacts.gradle
@@ -46,8 +46,8 @@ task generateJavadoc(type: Javadoc) {
         //options.addStringOption('Xdoclint:none', '-quiet')
     }
     // Append class path with dependencies.
-    final String mavenLocalDir = project.property('maven.url.local')
-    final String supportVersion = project.property('android.support.version')
+    def String mavenLocalDir = project.property('maven.url.local')
+    def String supportVersion = project.property('android.support.version')
     classpath += files(
             android.getBootClasspath(),
             sdkDir + '\\extras\\android\\m2repository\\com\\android\\support\\support-annotations\\' + supportVersion + '\\support-annotations-' + supportVersion + '.jar',
