--- a/deploy/bintray.gradle
+++ b/deploy/bintray.gradle
@@ -102,7 +102,7 @@ bintray {
         userOrg = 'universum-studios'
         licenses = ['Apache-2.0']
         vcsUrl = project.property('maven.pom.project.url') + '.git'
-        labels = ['android', 'settings', 'preference']
+        labels = ['android', 'preference', 'setting']
         publicDownloadNumbers = true
         version {
             name = project.property('bintray.package.version.name')
