--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,8 +1,11 @@
 // Defines all dependencies used across the library project.
 ext {
     // Versions.
-    libraryVersion = '1.1.0'
+    libraryVersion = '0.9.0'
     androidSupportVersion = '25.1.1'
+    androidUniversumWidgetAdaptersVersion = '1.0.0'
+    androidUniversumUiVersion = '0.9.0'
+    androidUniversumDialogsVersion = '0.9.0'
     androidTestVersion = '0.5'
     androidEspressoVersion = '2.2.2'
     junitVersion = '4.12'
@@ -15,7 +18,12 @@ ext {
             androidSupportAnnotations: "com.android.support:support-annotations:${androidSupportVersion}",
             androidSupportV4: "com.android.support:support-v4:${androidSupportVersion}",
             androidSupportAppCompatV7: "com.android.support:appcompat-v7:${androidSupportVersion}",
-            androidSupportVectorDrawable: "com.android.support:support-vector-drawable:${androidSupportVersion}"
+            androidSupportVectorDrawable: "com.android.support:support-vector-drawable:${androidSupportVersion}",
+            androidUniversumWidgetAdaptersCore: "universum.studios.android:widget-adapters-core:${androidUniversumWidgetAdaptersVersion}@aar",
+            androidUniversumWidgetAdaptersList: "universum.studios.android:widget-adapters-list:${androidUniversumWidgetAdaptersVersion}@aar",
+            androidUniversumWidgetAdaptersSpinner: "universum.studios.android:widget-adapters-spinner:${androidUniversumWidgetAdaptersVersion}@aar",
+            androidUniversumUi: "universum.studios.android:ui:${androidUniversumUiVersion}@aar",
+            androidUniversumDialogs: "universum.studios.android:dialogs:${androidUniversumDialogsVersion}@aar"
     ]
 
     /**
