--- a/library-dialog_group/build.gradle
+++ b/library-dialog_group/build.gradle
@@ -86,6 +86,7 @@ dependencies {
      */
     compile releaseDependencies.androidSupportAnnotations
     compile releaseDependencies.androidSupportAppCompatV7
+    compile releaseDependencies.androidUniversumGraphicsColorUtil
     compile releaseDependencies.androidUniversumUi
     compile releaseDependencies.androidUniversumDialogs
     releaseCompile "universum.studios.android:settings-core:${libraryVersion}@aar"
