--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,6 +4,7 @@ ext {
     libraryVersion = '0.9.0'
     androidSupportVersion = '25.1.1'
     androidUniversumWidgetAdaptersVersion = '1.0.0'
+    androidUniversumGraphicsVersion = '1.0.0'
     androidUniversumUiVersion = '0.9.0'
     androidUniversumDialogsVersion = '0.9.0'
     androidTestVersion = '0.5'
@@ -23,6 +24,7 @@ ext {
             androidUniversumWidgetAdaptersList: "universum.studios.android:widget-adapters-list:${androidUniversumWidgetAdaptersVersion}@aar",
             androidUniversumWidgetAdaptersListBase: "universum.studios.android:widget-adapters-list-base:${androidUniversumWidgetAdaptersVersion}@aar",
             androidUniversumWidgetAdaptersSpinner: "universum.studios.android:widget-adapters-spinner:${androidUniversumWidgetAdaptersVersion}@aar",
+            androidUniversumGraphicsColorUtil: "universum.studios.android:graphics-color-util:${androidUniversumGraphicsVersion}@aar",
             androidUniversumUi: "universum.studios.android:ui:${androidUniversumUiVersion}@aar",
             androidUniversumDialogs: "universum.studios.android:dialogs:${androidUniversumDialogsVersion}@aar"
     ]
