--- a/library-dialog-edit/build.gradle
+++ b/library-dialog-edit/build.gradle
@@ -64,6 +64,7 @@ dependencies {
      */
     compile releaseDependencies.androidSupportAnnotations
     compile releaseDependencies.androidSupportAppCompatV7
+    compile releaseDependencies.androidUniversumGraphicsColorUtil
     compile releaseDependencies.androidUniversumUi
     compile releaseDependencies.androidUniversumDialogs
     releaseCompile "universum.studios.android:settings-core:${libraryVersion}@aar"
