--- a/library-menu/build.gradle
+++ b/library-menu/build.gradle
@@ -64,6 +64,7 @@ dependencies {
      */
     compile releaseDependencies.androidSupportAnnotations
     compile releaseDependencies.androidSupportAppCompatV7
+    compile releaseDependencies.androidUniversumGraphicsColorUtil
     compile releaseDependencies.androidUniversumUi
     compile releaseDependencies.androidUniversumWidgetAdaptersCore
     compile releaseDependencies.androidUniversumWidgetAdaptersListBase
