--- a/gradle.properties
+++ b/gradle.properties
@@ -27,5 +27,5 @@ maven.pom.project.issueManagement.url=https://github.com/universum-studios/andro
 bintray.publish=false
 bintray.package.name=universum.studios.android:settings
 bintray.package.version.name=0.9.1
-bintray.package.version.description=First pre-release.
+bintray.package.version.description=Pre-release patch.
 bintray.package.version.tag=0.9.1
