--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,8 +5,9 @@ ext {
     androidSupportVersion = '25.1.1'
     androidUniversumWidgetAdaptersVersion = '1.0.0'
     androidUniversumGraphicsVersion = '1.0.0'
-    androidUniversumUiVersion = '0.9.0'
-    androidUniversumDialogsVersion = '0.9.0'
+    androidUniversumUiVersion = '0.9.1'
+    androidUniversumFontVersion = '1.0.0'
+    androidUniversumDialogsVersion = '0.9.1'
     androidTestVersion = '0.5'
     androidEspressoVersion = '2.2.2'
     junitVersion = '4.12'
@@ -26,6 +27,8 @@ ext {
             androidUniversumWidgetAdaptersSpinner: "universum.studios.android:widget-adapters-spinner:${androidUniversumWidgetAdaptersVersion}@aar",
             androidUniversumGraphicsColorUtil: "universum.studios.android:graphics-color-util:${androidUniversumGraphicsVersion}@aar",
             androidUniversumUi: "universum.studios.android:ui:${androidUniversumUiVersion}@aar",
+            androidUniversumFontCore: "universum.studios.android:font-core:${androidUniversumFontVersion}@aar",
+            androidUniversumFontUtil: "universum.studios.android:font-util:${androidUniversumFontVersion}@aar",
             androidUniversumDialogs: "universum.studios.android:dialogs:${androidUniversumDialogsVersion}@aar"
     ]
 
