--- a/deploy/artifacts.gradle
+++ b/deploy/artifacts.gradle
@@ -54,6 +54,8 @@ task generateJavadoc(type: Javadoc) {
             "${mavenLocalDirectory}\\universum\\studios\\android\\widget-adapters-list\\${androidUniversumWidgetAdaptersVersion}\\widget-adapters-list-${androidUniversumWidgetAdaptersVersion}-sources.jar",
             "${mavenLocalDirectory}\\universum\\studios\\android\\widget-adapters-spinner\\${androidUniversumWidgetAdaptersVersion}\\widget-adapters-spinner-${androidUniversumWidgetAdaptersVersion}-sources.jar",
             "${mavenLocalDirectory}\\universum\\studios\\android\\ui\\${androidUniversumUiVersion}\\ui-${androidUniversumUiVersion}-sources.jar",
+            "${mavenLocalDirectory}\\universum\\studios\\android\\font-core\\${androidUniversumFontVersion}\\font-core-${androidUniversumFontVersion}-sources.jar",
+            "${mavenLocalDirectory}\\universum\\studios\\android\\font-util\\${androidUniversumFontVersion}\\font-util-${androidUniversumFontVersion}-sources.jar",
             "${mavenLocalDirectory}\\universum\\studios\\android\\dialogs\\${androidUniversumDialogsVersion}\\dialogs-${androidUniversumDialogsVersion}-sources.jar"
     )
     failOnError false
