--- a/library-dialog_group/build.gradle
+++ b/library-dialog_group/build.gradle
@@ -77,6 +77,7 @@ android {
  */
 repositories {
     maven { url = '../artifacts/' }
+    mavenLocal()
     maven { url "http://dl.bintray.com/universum-studios/android" }
 }
 
@@ -88,6 +89,8 @@ dependencies {
     compile releaseDependencies.androidSupportAppCompatV7
     compile releaseDependencies.androidUniversumGraphicsColorUtil
     compile releaseDependencies.androidUniversumUi
+    compile releaseDependencies.androidUniversumFontCore
+    compile releaseDependencies.androidUniversumFontUtil
     compile releaseDependencies.androidUniversumDialogs
     releaseCompile "universum.studios.android:settings-core:${libraryVersion}@aar"
 
