Updated gradle configuration scripts.

--- a/deploy/artifacts.gradle
+++ b/deploy/artifacts.gradle
@@ -34,7 +34,7 @@ task generateJavadoc(type: Javadoc) {
     options {
         author = true
         memberLevel = JavadocMemberLevel.PROTECTED
-        header = project.property('maven.pom.project.name') + ' ' + project.property('maven.pom.version') + ' Documentation'
+        header = config.maven.projectName + ' ' + config.maven.version + ' Documentation'
         links "http://docs.oracle.com/javase/8/docs/api/"
         linksOffline "http://developer.android.com/reference", "${android.sdkDirectory}\\docs\\reference"
     }
@@ -43,20 +43,19 @@ task generateJavadoc(type: Javadoc) {
         //options.addStringOption('Xdoclint:none', '-quiet')
     }
     // Append class path with dependencies.
-    final String mavenLocalDirectory = System.getenv('MAVEN_URL_LOCAL')
     classpath += files(
             android.getBootClasspath(),
-            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-annotations\\${androidSupportVersion}\\support-annotations-${androidSupportVersion}.jar",
-            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-v4\\${androidSupportVersion}\\support-v4-${androidSupportVersion}-sources.jar",
-            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\appcompat-v7\\${androidSupportVersion}\\appcompat-v7-${androidSupportVersion}-sources.jar",
-            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-vector-drawable\\${androidSupportVersion}\\support-vector-drawable-${androidSupportVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\widget-adapters-core\\${androidUniversumWidgetAdaptersVersion}\\widget-adapters-core-${androidUniversumWidgetAdaptersVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\widget-adapters-list\\${androidUniversumWidgetAdaptersVersion}\\widget-adapters-list-${androidUniversumWidgetAdaptersVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\widget-adapters-spinner\\${androidUniversumWidgetAdaptersVersion}\\widget-adapters-spinner-${androidUniversumWidgetAdaptersVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\ui\\${androidUniversumUiVersion}\\ui-${androidUniversumUiVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\font-core\\${androidUniversumFontVersion}\\font-core-${androidUniversumFontVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\font-util\\${androidUniversumFontVersion}\\font-util-${androidUniversumFontVersion}-sources.jar",
-            "${mavenLocalDirectory}\\universum\\studios\\android\\dialogs\\${androidUniversumDialogsVersion}\\dialogs-${androidUniversumDialogsVersion}-sources.jar"
+            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-annotations\\${versions.androidSupportVersion}\\support-annotations-${versions.androidSupportVersion}.jar",
+            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-v4\\${versions.androidSupportVersion}\\support-v4-${versions.androidSupportVersion}-sources.jar",
+            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\appcompat-v7\\${versions.androidSupportVersion}\\appcompat-v7-${versions.androidSupportVersion}-sources.jar",
+            "${android.sdkDirectory}\\extras\\android\\m2repository\\com\\android\\support\\support-vector-drawable\\${versions.androidSupportVersion}\\support-vector-drawable-${versions.androidSupportVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\widget-adapters-core\\${versions.universumStudiosWidgetAdaptersVersion}\\widget-adapters-core-${versions.universumStudiosWidgetAdaptersVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\widget-adapters-list\\${versions.universumStudiosWidgetAdaptersVersion}\\widget-adapters-list-${versions.universumStudiosWidgetAdaptersVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\widget-adapters-spinner\\${versions.universumStudiosWidgetAdaptersVersion}\\widget-adapters-spinner-${versions.universumStudiosWidgetAdaptersVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\ui\\${versions.universumStudiosUIVersion}\\ui-${versions.universumStudiosUIVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\font-core\\${versions.universumStudiosFontVersion}\\font-core-${versions.universumStudiosFontVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\font-util\\${versions.universumStudiosFontVersion}\\font-util-${versions.universumStudiosFontVersion}-sources.jar",
+            "${config.maven.localUrl}\\universum\\studios\\android\\dialogs\\${versions.universumStudiosDialogsVersion}\\dialogs-${versions.universumStudiosDialogsVersion}-sources.jar"
     )
     failOnError false
 }
