--- a/library-activity/build.gradle
+++ b/library-activity/build.gradle
@@ -68,7 +68,6 @@ dependencies {
     compile deps.androidSupport.appCompatV7
     compile deps.universumStudios.ui
     compile deps.universumStudios.fontCore
-    compile deps.universumStudios.fontUtil
     releaseCompile "universum.studios.android:settings-core:${config.library.version}@aar"
 
     /*
@@ -82,5 +81,4 @@ dependencies {
     androidTestCompile project(':test-core')
 }
 
-// Apply DEPLOY script.
-apply from: '../deploy/deploy.gradle'
+apply from: "${rootProject.rootDir}/deploy/deploy.gradle"
