--- a/library-core/build.gradle
+++ b/library-core/build.gradle
@@ -69,7 +69,6 @@ dependencies {
     compile deps.androidSupport.appCompatV7
     compile deps.universumStudios.ui
     compile deps.universumStudios.fontCore
-    compile deps.universumStudios.fontUtil
 
     /*
      * TEST DEPENDENCIES ---------------------------------------------------------------------------
@@ -77,5 +76,4 @@ dependencies {
     androidTestCompile project(':test-core')
 }
 
-// Apply DEPLOY script.
-apply from: '../deploy/deploy.gradle'
+apply from: "${rootProject.rootDir}/deploy/deploy.gradle"
