--- a/library-dialog-edit/build.gradle
+++ b/library-dialog-edit/build.gradle
@@ -69,7 +69,6 @@ dependencies {
     compile deps.universumStudios.graphicsColorUtil
     compile deps.universumStudios.ui
     compile deps.universumStudios.fontCore
-    compile deps.universumStudios.fontUtil
     compile deps.universumStudios.dialogs
     releaseCompile "universum.studios.android:settings-core:${config.library.version}@aar"
     releaseCompile "universum.studios.android:settings-dialog-base:${config.library.version}@aar"
@@ -85,5 +84,4 @@ dependencies {
     androidTestCompile project(':test-core')
 }
 
-// Apply DEPLOY script.
-apply from: '../deploy/deploy.gradle'
+apply from: "${rootProject.rootDir}/deploy/deploy.gradle"
