--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -34,12 +34,8 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    dataBinding {
-        enabled = true
-    }
-
     if (project.hasProperty('signing.properties') && new File((String) project.property('signing.properties')).exists()) {
-        def Properties properties = new Properties();
+        final Properties properties = new Properties()
         properties.load(new FileInputStream(file(project.property('signing.properties'))))
 
         signingConfigs {
@@ -64,6 +60,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 /**
@@ -80,7 +80,7 @@ dependencies {
     compile deps.androidSupport.vectorDrawable
     compile deps.androidSupport.recyclerView
     compile deps.other.butterknife
-    annotationProcessor deps.apt.butterknife
+    annotationProcessor deps.other.butterknifeProcessor
     compile deps.universumStudios.samples
     compile deps.universumStudios.fragments
 }
