--- a/configuration.gradle
+++ b/configuration.gradle
@@ -1,20 +1,21 @@
 // Defines configuration used across the library project.
-def buildConfig = [
-        compileSdkVersion: 26,
-        minSdkVersion    : 14,
-        targetSdkVersion : 26,
-        buildToolsVersion: '25.0.3'
-]
-
-def testConfig = [
-        // instrumentationRunner: 'android.support.test.runner.AndroidJUnitRunner'
-        // We use custom runner which supports MultiDex due to exceeded limit for methods count.
-        instrumentationRunner: 'universum.studios.android.test.runner.MultiDexAndroidJUnitRunner'
-]
-
 def libraryConfig = [
         version          : '0.9.0',
         preReleaseVersion: '0.9.5'
+]
+
+def buildConfig = [
+        compileSdkVersion: 27,
+        minSdkVersion    : 14,
+        targetSdkVersion : 27,
+        buildToolsVersion: '27.0.0'
+]
+
+def testConfig = [
+        instrumentationRunner: [
+                androidJUnit        : 'android.support.test.runner.AndroidJUnitRunner',
+                multidexAndroidJUnit: 'universum.studios.android.test.instrumented.MultiDexAndroidJUnitRunner'
+        ]
 ]
 
 def githubConfig = [
@@ -42,16 +43,12 @@ def bintrayConfig = [
         packageLabels            : ['android', 'setting', 'preference'],
         packageVersionName       : mavenConfig.version,
         packageVersionDescription: 'Pre-release patch.',
-        packageVersionTag        : mavenConfig.version
+        packageVersionTag        : "v${mavenConfig.version}"
 ]
 
 def codacyConfig = [
         tokensPath : System.getenv('CODACY_PROJECT_TOKENS'),
         projectName: "${githubConfig.repository}"
-]
-
-def ciConfig = [
-        travis: Boolean.parseBoolean(System.getenv('TRAVIS'))
 ]
 
 ext.config = [
@@ -61,6 +58,5 @@ ext.config = [
         "github" : githubConfig,
         "maven"  : mavenConfig,
         "bintray": bintrayConfig,
-        "codacy" : codacyConfig,
-        "ci"     : ciConfig
+        "codacy" : codacyConfig
 ]
