--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,18 +1,17 @@
 // Defines dependencies used across the library project.
 def versions = [
-        androidSupport                : '26.0.0',
-        androidSupportMultiDex        : '1.0.1',
-        androidSupportTest            : '1.0',
-        androidSupportTestEspresso    : '3.0.0',
-        universumStudiosGraphics      : '1.0.0',
-        universumStudiosUI            : '0.9.4',
-        universumStudiosFont          : '1.1.1',
-        universumStudiosDialogs       : '0.9.3',
-        universumStudiosSamples       : '0.1.3',
-        universumStudiosFragments     : '1.2.0',
-        butterknife                   : '8.5.1',
-        junit                         : '4.12',
-        mockito                       : '2.7.20'
+        androidSupport            : '27.0.0',
+        androidSupportMultiDex    : '1.0.1',
+        androidSupportTest        : '1.0.1',
+        androidSupportTestEspresso: '3.0.1',
+        universumStudiosGraphics  : '1.0.0',
+        universumStudiosUI        : '0.9.6',
+        universumStudiosFont      : '1.1.2',
+        universumStudiosDialogs   : '0.9.5',
+        butterknife               : '8.8.1',
+        junit                     : '4.12',
+        mockito                   : '2.11.0',
+        robolectric               : '3.5'
 ]
 
 ext.versions = versions
@@ -29,28 +28,32 @@ def androidSupport = [
 ]
 
 def test = [
-        androidSupportAnnotations: androidSupport.annotations,
-        androidRunner            : "com.android.support.test:runner:${versions.androidSupportTest}",
-        androidRules             : "com.android.support.test:rules:${versions.androidSupportTest}",
-        androidEspressoCore      : "com.android.support.test.espresso:espresso-core:${versions.androidSupportTestEspresso}",
-        androidEspressoIntents   : "com.android.support.test.espresso:espresso-intents:${versions.androidSupportTestEspresso}",
-        androidEspressoContrib   : "com.android.support.test.espresso:espresso-contrib:${versions.androidSupportTestEspresso}",
-        junit                    : "junit:junit:${versions.junit}",
-        mockitoCore              : "org.mockito:mockito-core:${versions.mockito}",
-        mockitoAndroid           : "org.mockito:mockito-android:${versions.mockito}"
+        junit                      : "junit:junit:${versions.junit}",
+        mockitoCore                : "org.mockito:mockito-core:${versions.mockito}",
+        mockitoAndroid             : "org.mockito:mockito-android:${versions.mockito}",
+        robolectric                : "org.robolectric:robolectric:${versions.robolectric}",
+        robolectricMultidex        : "org.robolectric:shadows-multidex:${versions.robolectric}",
+        robolectricShadowsSupportV4: "org.robolectric:shadows-supportv4:${versions.robolectric}",
+        androidRunner              : "com.android.support.test:runner:${versions.androidSupportTest}",
+        androidRules               : "com.android.support.test:rules:${versions.androidSupportTest}",
+        androidEspressoCore        : "com.android.support.test.espresso:espresso-core:${versions.androidSupportTestEspresso}",
+        androidEspressoIntents     : "com.android.support.test.espresso:espresso-intents:${versions.androidSupportTestEspresso}",
+        androidEspressoContrib     : "com.android.support.test.espresso:espresso-contrib:${versions.androidSupportTestEspresso}",
+        androidSupportAnnotations  : androidSupport.annotations,
+        androidSupportV4           : androidSupport.v4
 ]
 
 def universumStudios = [
-        graphicsColorUtil     : "universum.studios.android:graphics-color-util:${versions.universumStudiosGraphics}@aar",
-        ui                    : "universum.studios.android:ui:${versions.universumStudiosUI}@aar",
-        fontCore              : "universum.studios.android:font-core:${versions.universumStudiosFont}@aar",
-        dialogs               : "universum.studios.android:dialogs:${versions.universumStudiosDialogs}@aar",
-        samples               : "universum.studios.android:samples:${versions.universumStudiosSamples}@aar",
-        fragments             : "universum.studios.android:fragments:${versions.universumStudiosFragments}@aar"
+        graphicsColorUtil: "universum.studios.android:graphics-color-util:${versions.universumStudiosGraphics}@aar",
+        ui               : "universum.studios.android:ui:${versions.universumStudiosUI}@aar",
+        fontCore         : "universum.studios.android:font-core:${versions.universumStudiosFont}@aar",
+        dialogs          : "universum.studios.android:dialogs:${versions.universumStudiosDialogs}@aar",
+        samples          : 'universum.studios.android:samples:0.1.4@aar',
+        fragments        : 'universum.studios.android:fragments:1.3.0@aar'
 ]
 
 def other = [
-        butterknife: "com.jakewharton:butterknife:${versions.butterknife}",
+        butterknife         : "com.jakewharton:butterknife:${versions.butterknife}",
         butterknifeProcessor: "com.jakewharton:butterknife-compiler:${versions.butterknife}"
 ]
 
