--- a/deploy/bintray.gradle
+++ b/deploy/bintray.gradle
@@ -67,9 +67,9 @@ publishing {
                 projectNode.children().last() + pomConfig
                 // Append dependencies.
                 def dependenciesNode = projectNode.appendNode('dependencies')
-                // Iterate over the dependencies (except the test ones),
-                // adding a <dependency></dependency> node for each.
-                configurations.compile.allDependencies.each {
+                // Iterate over the dependencies, adding a <dependency>...</dependency>
+                // node for each one that is part of the implementation.
+                configurations.implementation.allDependencies.each {
                     if(it.group != null && (it.name != null || it.name != "unspecified") && it.version != null) {
                         def dependencyNode = dependenciesNode.appendNode('dependency')
                         dependencyNode.appendNode('groupId', it.group)
@@ -77,7 +77,7 @@ publishing {
                         dependencyNode.appendNode('version', it.version)
                     }
                 }
-                configurations.releaseCompile.allDependencies.each {
+                configurations.releaseImplementation.allDependencies.each {
                     if(it.group != null && (it.name != null || it.name != "unspecified") && it.version != null) {
                         def dependencyNode = dependenciesNode.appendNode('dependency')
                         dependencyNode.appendNode('groupId', it.group)
