--- a/library-dialog-edit/build.gradle
+++ b/library-dialog-edit/build.gradle
@@ -28,7 +28,7 @@ android {
     defaultConfig {
         minSdkVersion config.build.minSdkVersion
         targetSdkVersion config.build.targetSdkVersion
-        testInstrumentationRunner config.test.instrumentationRunner
+        testInstrumentationRunner config.test.instrumentationRunner.multidexAndroidJUnit
     }
 
     buildTypes {
@@ -42,8 +42,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     lintOptions {
@@ -64,24 +64,24 @@ dependencies {
     /*
      * RELEASE DEPENDENCIES ------------------------------------------------------------------------
      */
-    compile deps.androidSupport.annotations
-    compile deps.androidSupport.appCompatV7
-    compile deps.universumStudios.graphicsColorUtil
-    compile deps.universumStudios.ui
-    compile deps.universumStudios.fontCore
-    compile deps.universumStudios.dialogs
-    releaseCompile "universum.studios.android:settings-core:${config.library.version}@aar"
-    releaseCompile "universum.studios.android:settings-dialog-base:${config.library.version}@aar"
+    implementation deps.androidSupport.annotations
+    implementation deps.androidSupport.appCompatV7
+    implementation deps.universumStudios.graphicsColorUtil
+    implementation deps.universumStudios.ui
+    implementation deps.universumStudios.fontCore
+    implementation deps.universumStudios.dialogs
+    releaseImplementation "universum.studios.android:settings-core:${config.library.version}@aar"
+    releaseImplementation "universum.studios.android:settings-dialog-base:${config.library.version}@aar"
 
     /*
      * DEBUG DEPENDENCIES --------------------------------------------------------------------------
      */
-    debugCompile project(':library-dialog-base')
+    debugApi project(':library-dialog-base')
 
     /*
      * TEST DEPENDENCIES ---------------------------------------------------------------------------
      */
-    androidTestCompile project(':test-core')
+    androidTestImplementation project(':test-instrumented')
 }
 
 apply from: "${rootProject.rootDir}/deploy/deploy.gradle"
