--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -57,8 +57,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     dataBinding {
@@ -75,12 +75,12 @@ repositories {
 }
 
 dependencies {
-    compile project(':library')
-    compile deps.androidSupport.design
-    compile deps.androidSupport.vectorDrawable
-    compile deps.androidSupport.recyclerView
-    compile deps.other.butterknife
+    implementation project(':library')
+    implementation deps.androidSupport.design
+    implementation deps.androidSupport.vectorDrawable
+    implementation deps.androidSupport.recyclerView
+    implementation deps.other.butterknife
     annotationProcessor deps.other.butterknifeProcessor
-    compile deps.universumStudios.samples
-    compile deps.universumStudios.fragments
+    implementation deps.universumStudios.samples
+    implementation deps.universumStudios.fragments
 }
