--- a/library-selection/build.gradle
+++ b/library-selection/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation deps.universumStudios.graphicsColorUtil
     implementation deps.universumStudios.ui
     implementation deps.universumStudios.fontCore
-    releaseImplementation "universum.studios.android:settings-core:${config.library.version}@aar"
+    releaseImplementation deps.modules.libraryCore
 
     // DEVELOPMENT ---------------------------------------------------------------------------------
     debugApi project(':library-core')
